fix a problem with menu spacing on firefox on mac osx looked like a rounding error

--- a/clearhealth.css
+++ b/clearhealth.css
@@ -95,7 +95,7 @@ div#nav div.topLevel {
 
 div#nav div ul {
 	margin: 0px;
-	margin-top: -1px;
+	margin-top: -2px;
 	padding: 0px;
 	position: absolute;
 	border: solid 1px black;
@@ -124,9 +124,11 @@ div#nav div ul li{
 }
 
 div#nav > div a {
+	display: block;
 	padding: 0px;
 	padding-left: 1pt;
 	padding-right: 1pt;
+	z-index: 11;
 }
 
 div#nav a {
